Bulma is installed and the devise layout is created

--- a/app/views/layouts/devise.html.haml
+++ b/app/views/layouts/devise.html.haml
@@ -8,4 +8,13 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
-    = yield
+    .hero
+      .hero-body
+        .columns
+          .column.is-half.is-offset-one-quarter
+            .has-text-centered
+              %h1.title.is-1
+                = link_to "Orange", root_path
+            .card
+              .card-content
+                = yield
